gcc/testsuite/gdc.test/compilable/test6319.d
// REQUIRED_ARGS: -debug

int x;

void main() pure
{
    debug
    {
        {
            x = 0;
        }
    }
}
